# flux-flow

./: .editorconfig  .pre-commit-config.yaml  Cargo.toml  README.md  bla.flx  flux-flow.excalidraw  in.rs  in_old.rs  out.rs  output.txt
flux-flow/: Cargo.toml
flux-flow/examples/: enum.flx  newtype.flx  simple.rs  test.rs
flux-flow/src/: compiler.rs  lib.rs  runtime_type.rs  runtime_value.rs  stack.rs  static_type.rs  typing.rs  value.rs
flux-flow/src/__compilation/: block.rs  constant.rs  expression.rs  function.rs  module.rs  statement.rs
flux-flow/src/__compilation/module/: interface.rs  interfaceable.rs
flux-flow/src/compiler/: assembler.rs  ast.rs  diagnostic.rs  lexer.rs  parser.rs  parser_broken_and_recursive.rs  resolver.rs  token_stream.rs  typing.rs
flux-flow/src/compiler/parser/: grammar.rs  node_builder.rs  parse_request.rs  syntax_tree.rs  syntax_tree_node_builder.rs  token_stream_stack.rs
flux-flow/src/compiler/typing/: boolean.rs  collections.rs  function.rs  instant.rs  meta.rs  number.rs  string.rs  struct_type.rs  structure.rs  trait_type.rs  union.rs  (+2 more)
flux-flow/src/runtime/: stack.rs
flux-flow/src/runtime_value/: function.rs  list.rs  map.rs  number.rs  set.rs  store.rs  string.rs  struct.rs
flux-flow/src/stack/: boolean.rs
flux-flow/src/typing/: char.rs  collections.rs  function.rs  new_type.rs  number.rs  string.rs  struct_type.rs  trait_type.rs  uuid.rs
flux-flow/src/value/: _primitives.rs  _range.rs  _string.rs  _tuple.rs  collections.rs  function.rs  number.rs  primitives.rs  range.rs  string.rs  tuple.rs  typed_function.rs
(+38 files in other folders)
