[package]
name = "flux-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
# bitvec = "1.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
# num-bigint = "0.4.3"
# num-rational = "0.4.1"
# num-traits = "0.2.15"
ordered-float = "4.1"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
notify = "6.0"
