[package]
name = "flux-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
derive_more = "0.99.17"
enumset = "1.1.3"
itertools = "0.13.0"
lazy_static = "1.4.0"
malachite = "0.4.7"
num-traits = "0.2.19"
ordered-float = "4.2.0"
paste = "1.0.15"
thiserror = "1.0.60"

[dev-dependencies]
notify = "6.1.1"
